--- a/spotify-tui/client.yml
+++ b/spotify-tui/client.yml
@@ -1,5 +1,5 @@
 ---
 client_id: 220b121eaba34fe5847252fc3bf51a97
-client_secret: ad31560b272c4a8888f1f58098291473
+client_secret: 
 device_id: 793d6d7c60bd6329d6f91fdb8c1b53aab99bf3da
 port: 8888
