--- a/spotifyd/spotifyd.conf
+++ b/spotifyd/spotifyd.conf
@@ -2,7 +2,7 @@
 # Your Spotify account name.
 username = "31hefy6ttjdd4bvo5we7qoqjaupq"
 # Your Spotify account password.
-password = "hesoyam6106"
+password = ""
 backend = "alsa"
 device_name = "pc"
 bitrate = 160
