updated wezterm and tmux configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,7 +48,7 @@ set -g escape-time 0             # zero-out escape time delay
 set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
-set -g status-position bottom       # macOS / darwin style
+set -g status-position top       # macOS / darwin style
 setw -g mode-keys vi
 
 
@@ -66,7 +66,7 @@ set -g @fzf-url-history-limit '2000'
 ############################
 
 
-
+set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'omerxx/tmux-sessionx'
@@ -75,8 +75,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
-set -g @plugin "janoamaral/tokyo-night-tmux"
-
+set -g @plugin 'omerxx/catppuccin-tmux'
 
 set -g @sessionx-bind 'o'
 set -g @sessionx-x-path '~/dotfiles'
