--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,7 +50,7 @@ set -g renumber-windows on       # renumber all windows when any window is close
 set -g set-clipboard on          # use system clipboard
 set -g status-position top       # macOS / darwin style
 setw -g mode-keys vi
-
+set -g allow-passthrough on
 
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
