--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 unbind r 
 bind r source-file ~/.tmux.conf
 
-set -g prefix C-s  
+set -g prefix C-space  
 set -g mouse on 
 
 
@@ -27,50 +27,50 @@ set-option -g status-position top
 ##  plugins            #####
 ############################
 
-
+set -g @plugin 'tmux-plugins/tmux-fpp'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 
 
 
-
-
-
-##################
-### theme stuff ##
-##################
-
-
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator "  █"
-
-set -g @catppuccin_window_default_fill "number"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#{pane_current_path}"
-
-set -g @catppuccin_status_modules_right "application session date_time"
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "yes"
-set -g @catppuccin_status_fill "all"
-set -g @catppuccin_status_connect_separator "no"
-
-
-
-
-
-
-
-
+#
+#
+# ##################
+# ### theme stuff ##
+# ##################
+#
+#
+# set -g @catppuccin_window_left_separator "█"
+# set -g @catppuccin_window_right_separator "█ "
+# set -g @catppuccin_window_number_position "right"
+# set -g @catppuccin_window_middle_separator "  █"
+#
+# set -g @catppuccin_window_default_fill "number"
+#
+# set -g @catppuccin_window_current_fill "number"
+# set -g @catppuccin_window_current_text "#{pane_current_path}"
+#
+# set -g @catppuccin_status_modules_right "application session date_time"
+# set -g @catppuccin_status_left_separator  ""
+# set -g @catppuccin_status_right_separator " "
+# set -g @catppuccin_status_right_separator_inverse "yes"
+# set -g @catppuccin_status_fill "all"
+# set -g @catppuccin_status_connect_separator "no"
+#
+#
+#
+#
+#
+#
+#
+#
 
 
 run '~/.tmux/plugins/tpm/tpm'
