skibidi alpha rizz

--- a/sway/config
+++ b/sway/config
@@ -18,13 +18,13 @@ set $term kitty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu wofi --show drun -I 
+set $menu rofi -show drun -show-icons 
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in @datadir@/backgrounds/sway/)
 exec_always autotiling
-
-
+exec lxsession 
+exec wl-paste -t text --watch clipman store --no-persist
 # Notification Daemon
 exec swaync
 
