--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,7 @@ set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'niksingh710/minimal-tmux-status'
-
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 
 #
