--- a/kitty/kitty/kitty.conf
+++ b/kitty/kitty/kitty.conf
@@ -12,6 +12,6 @@ confirm_os_window_close 0
 
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Gruvbox Material Dark Hard
 include current-theme.conf
 # END_KITTY_THEME
