--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,14 +31,14 @@ set -g @plugin 'tmux-plugins/tmux-fpp'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'catppuccin/tmux'
+ # set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
-set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark' # or 'light'
 
 #
 #
@@ -47,23 +47,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 # ##################
 #
 #
-# set -g @catppuccin_window_left_separator "█"
-# set -g @catppuccin_window_right_separator "█ "
-# set -g @catppuccin_window_number_position "right"
-# set -g @catppuccin_window_middle_separator "  █"
-#
-# set -g @catppuccin_window_default_fill "number"
-#
-# set -g @catppuccin_window_current_fill "number"
-# set -g @catppuccin_window_current_text "#{pane_current_path}"
-#
-# set -g @catppuccin_status_modules_right "application session date_time"
-# set -g @catppuccin_status_left_separator  ""
-# set -g @catppuccin_status_right_separator " "
-# set -g @catppuccin_status_right_separator_inverse "yes"
-# set -g @catppuccin_status_fill "all"
-# set -g @catppuccin_status_connect_separator "no"
-#
+
 #
 #
 #
