--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # VISUAL CONFIGURATION
-background_opacity 1.0
+background_opacity 0.75
 
 resize_in_steps yes
 window_margin_width    1
@@ -20,56 +20,56 @@ font_size 9.0
 ##################################
 # ColorScheme
 ##################################
-cursor                  #bdae93
-cursor_text_color       #665c54
-
-url_color               #83a598
-
-visual_bell_color       #8ec07c
-bell_border_color       #8ec07c
-
-active_border_color     #98971a
-inactive_border_color   #665c54
-
-background              #202020
-foreground              #fff4d2
-
-selection_foreground    #fff4d2
-selection_background    #d65d0e
-
-active_tab_foreground   #fabd2f
-active_tab_background   #1d2021
-inactive_tab_foreground #a89984
-inactive_tab_background #3c3836
+# cursor                  #bdae93
+# cursor_text_color       #665c54
+# url_color               #83a598
+# visual_bell_color       #8ec07c
+# bell_border_color       #8ec07c
+# active_border_color     #98971a
+# inactive_border_color   #665c54
+# background              #202020
+# foreground              #fff4d2
+# selection_foreground    #fff4d2
+# selection_background    #d65d0e
+# active_tab_foreground   #fabd2f
+# active_tab_background   #1d2021
+# inactive_tab_foreground #a89984
+# inactive_tab_background #3c3836
 
 # black  (bg3/bg4)
-color0                  #3c3836
-color8                  #928374
+# color0                  #3c3836
+# color8                  #928374
 
 # red
-color1                  #cc241d
-color9                  #fb4934
+# color1                  #cc241d
+# color9                  #fb4934
 
 #: green
-color2                  #98971a
-color10                 #b8bb26
+# color2                  #98971a
+# color10                 #b8bb26
 
 # yellow
-color3                  #d79921
-color11                 #fabd2f
+# color3                  #d79921
+# color11                 #fabd2f
 
 # blue
-color4                  #458588
-color12                 #83a598
+# color4                  #458588
+# color12                 #83a598
 
 # purple
-color5                  #b16286
-color13                 #d3869b
+# color5                  #b16286
+# color13                 #d3869b
 
 # aqua
-color6                  #689d6a
-color14                 #8ec07c
+# color6                  #689d6a
+# color14                 #8ec07c
 
 # white (fg4/fg3)
-color7                  #a89984
-color15                 #fbf1c7
+# color7                  #a89984
+# color15                 #fbf1c7
+
+
+# BEGIN_KITTY_THEME
+# Catppuccin Mocha 🌿
+include current-theme.conf
+# END_KITTY_THEME
