--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -27,7 +27,7 @@ exec_always autotiling
 exec lxsession 
 exec wl-paste -t text --watch clipman store --no-persist
 # Notification Daemon
-exec swaync
+exec dunst &
 
 # Toggle control center
 bindsym $mod+Shift+n exec swaync-client -t -sw
